Add footer and modal window

--- a/index.html
+++ b/index.html
@@ -119,167 +119,231 @@
           </section>
         </div>
       </div>
-        <section class="squad">
-          <div class="wrapper">
-            <div class="team-member-card">
-              <div class="team-member-photo"></div>
-              <div class="team-member-details">
-                <a href="/" class="section-link">
-                  Команда
-                </a>
-                <h2 class="section-title">
-                  Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.
-                </h2>
-                <p class="team-member-name">
-                  Олександр Олександровський
-                </p>
-                <p class="team-member-position">
-                  Керуючий партнер
-                </p>
-              </div>
-            </div>
-            <div class="slider">
-              <button type="button" class="team-member-slide active"></button>
-              <button type="button" class="team-member-slide"></button>
-              <button type="button" class="team-member-slide"></button>
+      <section class="squad">
+        <div class="wrapper">
+          <div class="team-member-card">
+            <div class="team-member-photo"></div>
+            <div class="team-member-details">
+              <a href="/" class="section-link">
+                Команда
+              </a>
+              <h2 class="section-title">
+                Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.
+              </h2>
+              <p class="team-member-name">
+                Олександр Олександровський
+              </p>
+              <p class="team-member-position">
+                Керуючий партнер
+              </p>
             </div>
           </div>
-        </section>
-        <section class="clients">
-          <h2 class="clients-title">
-            They already trust us
+          <div class="slider">
+            <button type="button" class="team-member-slide active"></button>
+            <button type="button" class="team-member-slide"></button>
+            <button type="button" class="team-member-slide"></button>
+          </div>
+        </div>
+      </section>
+      <section class="clients">
+        <h2 class="clients-title">
+          They already trust us
+        </h2>
+        <div class="client-wrapper">
+          <div class="clients-list">
+            <div class="client client-hillel">
+              <a href="/" class="client-page">
+                <img src="./assets/images/clients/hillel.png" alt="logo of client Hillel" height="48" width="217">
+              </a>
+            </div>
+            <div class="client client-wannaBiz">
+              <a href="/" class="client-page">
+                <img src="./assets/images/clients/wannaBiz.png" alt="logo of client WannaBiz" height="32" width="199">
+              </a>
+            </div>
+            <div class="client client-tapgerine">
+              <a href="/" class="client-page">
+                <img src="./assets/images/clients/tapgerine.png" alt="logo of client Tapgerine" height="44" width="179">
+              </a>
+            </div>
+            <div class="client client-3dLook">
+              <a href="/" class="client-page">
+                <img src="./assets/images/clients/3dLook.png" alt="logo of client 3D Look" height="42" width="180">
+              </a>
+            </div>
+            <div class="client client-orangear">
+              <a href="/" class="client-page">
+                <img src="./assets/images/clients/orangear.png" alt="logo of client Orangear" height="44" width="174">
+              </a>
+            </div>
+            <div class="client client-adtelligent">
+              <a href="/" class="client-page">
+                <img src="assets/images/clients/adtelligent.png" alt="logo of client Adtelligent" height="48" width="195">
+              </a>
+            </div>
+            <div class="client client-clickky">
+              <a href="/" class="client-page">
+                <img src="./assets/images/clients/clickky.png" alt="logo of client Clickky" height="61" width="138">
+              </a>
+            </div>
+            <div class="client client-ecolease">
+              <a href="/" class="client-page">
+                <img src="./assets/images/clients/ecolease.png" alt="logo of client Eco Leasing" height="76" width="146">
+              </a>
+            </div>
+            <div class="client client-infraTek">
+              <a href="/" class="client-page">
+                <img src="./assets/images/clients/infraTek.png" alt="logo of client Infratek" height="60" width="182">
+              </a>
+            </div>
+            <div class="client client-cityPark">
+              <a href="/" class="client-page">
+                <img src="./assets/images/clients/cityPark.png" alt="logo of client City Park" height="38" width="181">
+              </a>
+            </div>
+            <div class="client client-artPrint">
+              <a href="/" class="client-page">
+                <img src="./assets/images/clients/art-print.png" alt="logo of client Art-Print" height="46" width="189">
+              </a>
+            </div>
+            <div class="client client-ultimateCard">
+              <a href="/" class="client-page">
+                <img src="./assets/images/clients/ultimateCard.png" alt="logo of client Ultimate Card" height="95" width="152">
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="publications">
+        <div class="wrapper">
+          <a href="/" class="section-link">
+            Publications
+          </a>
+          <h2 class="section-title">
+            We have something to tell
           </h2>
-          <div class="client-wrapper">
-            <div class="clients-list">
-              <div class="client client-hillel">
-                <a href="/" class="client-page">
-                  <img src="./assets/images/clients/hillel.png" alt="logo of client Hillel" height="48" width="217">
+          <div class="articles">
+            <article class="article">
+              <a href="/" class="article-page">
+                <div class="article-banner art-equity"></div>
+                <div class="article-details">
+                  <div class="article-meta">
+                    <h3 class="article-title">
+                      Equity associate
+                    </h3>
+                    <p class="publication-date">
+                      April 22
+                    </p>
+                  </div>
+                  <p class="article-preview">
+                    I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I…
+                  </p>
+                </div>
+              </a>
+            </article>
+            <article class="article">
+              <a href="/" class="article-page">
+                <div class="article-banner art-gdpr"></div>
+                <div class="article-details">
+                  <div class="article-meta">
+                    <h3 class="article-title">
+                      Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR
+                    </h3>
+                    <p class="publication-date">
+                      September 29
+                    </p>
+                  </div>
+                  <p class="article-preview">
+                    And why the recovery of 50 million euros could be a fateful precedent According to Mind.ua January 21 National Commission for Data Protection.
+                  </p>
+                </div>
+              </a>
+            </article>
+            <article class="article">
+              <a href="/" class="article-page">
+                <div class="article-banner art-millennial"></div>
+                <div class="article-details">
+                  <div class="article-meta">
+                    <h3 class="article-title">
+                      Millennial Testament
+                    </h3>
+                    <p class="publication-date">
+                      August 19
+                    </p>
+                  </div>
+                  <p class="article-preview">
+                    What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment in…
+                  </p>
+                </div>
+              </a>
+            </article>
+          </div>
+        </div>
+      </section>
+      <footer class="footer">
+        <div class="wrapper">
+          <div class="contact-info">
+            <address class="address">
+              <div class="geolocation">
+                <p class="street">
+                  Kyiv, Mechnikova str., 14/1
+                </p>
+                <a href="/" class="location">
+                  On map
                 </a>
               </div>
-              <div class="client client-wannaBiz">
-                <a href="/" class="client-page">
-                  <img src="./assets/images/clients/wannaBiz.png" alt="logo of client WannaBiz" height="32" width="199">
+              <div class="contacts">
+                <a href="/" class="social-media">
+                  <svg width="39" height="38" viewBox="0 0 39 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_69379_340)">
+                      <path d="M38.5 19.1161C38.5 8.55857 29.9934 0 19.5 0C9.00658 0 0.5 8.55857 0.5 19.1161C0.5 28.6575 7.44803 36.5659 16.5312 38V24.6419H11.707V19.1161H16.5312V14.9046C16.5312 10.1136 19.3678 7.46723 23.7078 7.46723C25.7866 7.46723 27.9609 7.84059 27.9609 7.84059V12.545H25.5651C23.2048 12.545 22.4688 14.0185 22.4688 15.5302V19.1161H27.7383L26.8959 24.6419H22.4688V38C31.552 36.5659 38.5 28.6575 38.5 19.1161Z" fill="#24A3FF"/>
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_69379_340">
+                        <rect width="38" height="38" fill="white" transform="translate(0.5)"/>
+                      </clipPath>
+                    </defs>
+                  </svg>
                 </a>
+                <a href="tel:0800211927" class="tel">0800 211 927</a>
+                <a href="mailto:contact@forstudy.space" class="mail">contact@forstudy.space</a>
               </div>
-              <div class="client client-tapgerine">
-                <a href="/" class="client-page">
-                  <img src="./assets/images/clients/tapgerine.png" alt="logo of client Tapgerine" height="44" width="179">
-                </a>
-              </div>
-              <div class="client client-3dLook">
-                <a href="/" class="client-page">
-                  <img src="./assets/images/clients/3dLook.png" alt="logo of client 3D Look" height="42" width="180">
-                </a>
-              </div>
-              <div class="client client-orangear">
-                <a href="/" class="client-page">
-                  <img src="./assets/images/clients/orangear.png" alt="logo of client Orangear" height="44" width="174">
-                </a>
-              </div>
-              <div class="client client-adtelligent">
-                <a href="/" class="client-page">
-                  <img src="assets/images/clients/adtelligent.png" alt="logo of client Adtelligent" height="48" width="195">
-                </a>
-              </div>
-              <div class="client client-clickky">
-                <a href="/" class="client-page">
-                  <img src="./assets/images/clients/clickky.png" alt="logo of client Clickky" height="61" width="138">
-                </a>
-              </div>
-              <div class="client client-ecolease">
-                <a href="/" class="client-page">
-                  <img src="./assets/images/clients/ecolease.png" alt="logo of client Eco Leasing" height="76" width="146">
-                </a>
-              </div>
-              <div class="client client-infraTek">
-                <a href="/" class="client-page">
-                  <img src="./assets/images/clients/infraTek.png" alt="logo of client Infratek" height="60" width="182">
-                </a>
-              </div>
-              <div class="client client-cityPark">
-                <a href="/" class="client-page">
-                  <img src="./assets/images/clients/cityPark.png" alt="logo of client City Park" height="38" width="181">
-                </a>
-              </div>
-              <div class="client client-artPrint">
-                <a href="/" class="client-page">
-                  <img src="./assets/images/clients/art-print.png" alt="logo of client Art-Print" height="46" width="189">
-                </a>
-              </div>
-              <div class="client client-ultimateCard">
-                <a href="/" class="client-page">
-                  <img src="./assets/images/clients/ultimateCard.png" alt="logo of client Ultimate Card" height="95" width="152">
-                </a>
-              </div>
+            </address>
+            <div class="copyright">
+              <p>
+                © 2021 HLEGAL Law company, LLC
+              </p>
             </div>
           </div>
-        </section>
-        <section class="publications">
-          <div class="wrapper">
-            <a href="/" class="section-link">
-              Publications
-            </a>
-            <h2 class="section-title">
-              We have something to tell
-            </h2>
-            <div class="articles">
-              <article class="article">
-                <a href="/" class="article-page">
-                  <div class="article-banner art-equity"></div>
-                  <div class="article-details">
-                    <div class="article-meta">
-                      <h3 class="article-title">
-                        Equity associate
-                      </h3>
-                      <p class="publication-date">
-                        April 22
-                      </p>
-                    </div>
-                    <p class="article-preview">
-                      I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I…
-                    </p>
-                  </div>
-                </a>
-              </article>
-              <article class="article">
-                <a href="/" class="article-page">
-                  <div class="article-banner art-gdpr"></div>
-                  <div class="article-details">
-                    <div class="article-meta">
-                      <h3 class="article-title">
-                        Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR
-                      </h3>
-                      <p class="publication-date">
-                        September 29
-                      </p>
-                    </div>
-                    <p class="article-preview">
-                      And why the recovery of 50 million euros could be a fateful precedent According to Mind.ua January 21 National Commission for Data Protection.
-                    </p>
-                  </div>
-                </a>
-              </article>
-              <article class="article">
-                <a href="/" class="article-page">
-                  <div class="article-banner art-millennial"></div>
-                  <div class="article-details">
-                    <div class="article-meta">
-                      <h3 class="article-title">
-                        Millennial Testament
-                      </h3>
-                      <p class="publication-date">
-                        August 19
-                      </p>
-                    </div>
-                    <p class="article-preview">
-                      What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment in…
-                    </p>
-                  </div>
-                </a>
-              </article>
-            </div>
-          </div>
-        </section>
+        </div>
+      </footer>
     </main>
+    <form action="/" class="service-modal">
+      <div class="modal-title">
+        <h2 class="section-title">
+          We would like to help you
+        </h2>
+        <div>
+          <button type="button" class="close-button">
+            <svg class="close-modal" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7 7L25 25" stroke="#EC6F5D" stroke-width="2"/>
+              <path d="M25 7L7 25" stroke="#EC6F5D" stroke-width="2"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="feedback">
+        <input class="personal-info" type="text" name="name" placeholder="Name" required>
+        <textarea class="personal-info" name="message" rows="5" placeholder="Message"></textarea>
+      </div>
+      <h3 class="callback">
+        How to answer you?
+      </h3>
+      <div class="feedback">
+        <input class="personal-info" type="tel" name="tel" placeholder="Phone number" required>
+        <input class="personal-info" type="email" name="email" placeholder="Email" required>
+      </div>
+      <button class="send-form" type="submit">Send message</button>
+    </form>
   </body>
 </html>
