Add mobile header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="top-section">
         <div class="group-top-sections">
           <section class="hero-section">
-            <header class="header">
+            <header class="header-mobile">
               <div class="header-top head-wrap">
                 <div class="localization">
                   <a href="/" class="language">ук</a>
