Add desktop header

--- a/index.html
+++ b/index.html
@@ -45,6 +45,57 @@
                 </div>
               </div>
             </header>
+            <header class="header">
+              <div class="header-wrapper">
+                <div class="header-container">
+                  <div class="contacts-header">
+                    <div class="localization">
+                      <a href="/" class="language">ук</a>
+                      <a href="/" class="language">es</a>
+                      <a href="./index.html" class="language language-active">en</a>
+                    </div>
+                    <address class="address-header">
+                      <div class="header-address-item">
+                        <p class="street street-header">
+                          Kyiv, Mechnikova str., 14/1
+                        </p>
+                      </div>
+                      <div class="header-address-item">
+                        <a href="tel:0800211927" class="tel tel-header">0800 211 927</a>
+                      </div>
+                      <div class="header-address-item">
+                        <a href="/">
+                          <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_71817_1589)">
+                              <path d="M24 12.5733C24 5.90541 18.6274 0.5 12 0.5C5.37258 0.5 0 5.90541 0 12.5733C0 18.5995 4.38823 23.5943 10.125 24.5V16.0633H7.07813V12.5733H10.125V9.91343C10.125 6.88755 11.9165 5.21615 14.6576 5.21615C15.9705 5.21615 17.3438 5.45195 17.3438 5.45195V8.42313H15.8306C14.3399 8.42313 13.875 9.35379 13.875 10.3086V12.5733H17.2031L16.6711 16.0633H13.875V24.5C19.6118 23.5943 24 18.5995 24 12.5733Z" fill="white"/>
+                            </g>
+                            <defs>
+                              <clipPath id="clip0_71817_1589">
+                                <rect width="24" height="24" fill="white" transform="translate(0 0.5)"/>
+                              </clipPath>
+                            </defs>
+                          </svg>
+                        </a>
+                      </div>
+                    </address>
+                  </div>
+                  <div class="logo-link">
+                    <a href="./index.html">
+                      <img src="./assets/images/heroSection/main-logo-mobile.png" class="main-logo" alt="picture of the main logo">
+                    </a>
+                  </div>
+                  <div class="nav">
+                    <nav class="navigation">
+                      <a href="/" class="header-nav-link">about us</a>
+                      <a href="/" class="header-nav-link">services</a>
+                      <a href="/" class="header-nav-link">team</a>
+                      <a href="/" class="header-nav-link">publications</a>
+                      <a href="/" class="header-nav-link">contact</a>
+                    </nav>
+                  </div>
+                </div>
+              </div>
+            </header>
             <div class="page-title">
               <h1 class="hero-title">
                 you legal solutions provider
