Add single service page link

--- a/pages/services.html
+++ b/pages/services.html
@@ -102,7 +102,7 @@
               </h2>
               <div class="services-list">
                 <div class="service">
-                  <a href="/" class="service-page">
+                  <a href="./it-service.html" class="service-page">
                     <div class="service-icon">
                       <img src="../assets/images/services/ecommerce-service.png" alt="icon of e-commerce service" height="64" width="64">
                     </div>
