--- a/index.html
+++ b/index.html
@@ -424,35 +424,6 @@
         </div>
       </footer>
     </main>
-    <div class="layer-modal">
-      <form action="/" class="service-modal">
-        <div class="modal-title">
-          <h2 class="section-title">
-            We would like to help you
-          </h2>
-          <div>
-            <button type="button" class="close-button" id="close-modal-button">
-              <svg class="close-modal" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M7 7L25 25" stroke="#EC6F5D" stroke-width="2"/>
-                <path d="M25 7L7 25" stroke="#EC6F5D" stroke-width="2"/>
-              </svg>
-            </button>
-          </div>
-        </div>
-        <div class="feedback">
-          <input class="personal-info" type="text" name="name" placeholder="Name" required>
-          <textarea class="personal-info" name="message" rows="5" placeholder="Message"></textarea>
-        </div>
-        <h3 class="callback">
-          How to answer you?
-        </h3>
-        <div class="feedback">
-          <input class="personal-info" type="tel" name="tel" placeholder="Phone number" required>
-          <input class="personal-info" type="email" name="email" placeholder="Email" required>
-        </div>
-        <button class="send-form" type="submit">Send message</button>
-      </form>
-    </div>
     <div class="layer-nav-menu">
       <div class="nav-menu">
         <button class="close-button close-nav-menu" type="button" id="close-nav-button">
@@ -464,7 +435,7 @@
         <a href="/" class="nav-link">about us</a>
         <a href="./pages/services.html" class="nav-link nav-link-active">services</a>
         <a href="/" class="nav-link">team</a>
-        <a href="/" class="nav-link">publications</a>
+        <a href="./pages/publications.html" class="nav-link">publications</a>
         <a href="/" class="nav-link">contacts</a>
       </div>
     </div>
