--- a/pages/it-service.html
+++ b/pages/it-service.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="final, project, css, html, sass, hillel">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/styles/style.css">
-    <title>HLegal: Services</title>
+    <title>Services: IT and e-commerce</title>
   </head>
   <body>
     <main>
@@ -316,7 +316,7 @@
         <a href="/" class="nav-link">about us</a>
         <a href="./services.html" class="nav-link nav-link-active">services</a>
         <a href="/" class="nav-link">team</a>
-        <a href="/" class="nav-link">publications</a>
+        <a href="./publications.html" class="nav-link">publications</a>
         <a href="/" class="nav-link">contacts</a>
       </div>
     </div>
