--- a/pages/services.html
+++ b/pages/services.html
@@ -51,7 +51,7 @@
                   <div class="localization">
                     <a href="/" class="language">ук</a>
                     <a href="/" class="language">es</a>
-                    <a href="./index.html" class="language language-active">en</a>
+                    <a href="../index.html" class="language language-active">en</a>
                   </div>
                   <address class="address-header">
                     <div class="header-address-item">
@@ -88,7 +88,7 @@
                     <a href="/" class="header-nav-link">about us</a>
                     <a href="./services.html" class="header-nav-link nav-link-active">services</a>
                     <a href="/" class="header-nav-link">team</a>
-                    <a href="/" class="header-nav-link">publications</a>
+                    <a href="./publications.html" class="header-nav-link">publications</a>
                     <a href="/" class="header-nav-link">contact</a>
                   </nav>
                 </div>
@@ -331,7 +331,7 @@
         <a href="/" class="nav-link">about us</a>
         <a href="./services.html" class="nav-link nav-link-active">services</a>
         <a href="/" class="nav-link">team</a>
-        <a href="/" class="nav-link">publications</a>
+        <a href="./publications.html" class="nav-link">publications</a>
         <a href="/" class="nav-link">contacts</a>
       </div>
     </div>
