--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                       <a href="/" class="header-nav-link">about us</a>
                       <a href="./pages/services.html" class="header-nav-link">services</a>
                       <a href="/" class="header-nav-link">team</a>
-                      <a href="/" class="header-nav-link">publications</a>
+                      <a href="./publications" class="header-nav-link">publications</a>
                       <a href="/" class="header-nav-link">contact</a>
                     </nav>
                   </div>
