Add fixes to breadcrumbs

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
               </div>
               <div class="header-bottom head-wrap">
                 <div class="breadcrumbs">
-                  <div class="logo-link">
+                  <div class="logo-link-mobile">
                     <a href="./index.html">
                       <img src="./assets/images/heroSection/main-logo-mobile.png" class="main-logo" alt="picture of the main logo">
                     </a>
                   </div>
                   <a href="./index.html" class="current-page">
-                    services
+                    home
                   </a>
                 </div>
                 <div class="navigation">
@@ -79,9 +79,14 @@
                       </div>
                     </address>
                   </div>
-                  <div class="logo-link">
-                    <a href="./index.html">
-                      <img src="./assets/images/heroSection/main-logo-mobile.png" class="main-logo" alt="picture of the main logo">
+                  <div class="breadcrumbs home-page-breadcrumbs">
+                    <div class="logo-link-desktop">
+                      <a href="./index.html">
+                        <img src="./assets/images/heroSection/main-logo-mobile.png" class="main-logo" alt="picture of the main logo">
+                      </a>
+                    </div>
+                    <a href="./index.html" class="current-page">
+                      home
                     </a>
                   </div>
                   <div class="nav">
@@ -322,7 +327,7 @@
       </section>
       <section class="publications">
         <div class="wrapper">
-          <a href="/" class="section-link">
+          <a href="./pages/publications.html" class="section-link">
             Publications
           </a>
           <h2 class="section-title">
@@ -348,7 +353,7 @@
               </a>
             </article>
             <article class="article">
-              <a href="/" class="article-page">
+              <a href="./pages/gdpr-article.html" class="article-page">
                 <div class="article-banner art-gdpr"></div>
                 <div class="article-details">
                   <div class="article-meta">
