--- a/pages/publications.html
+++ b/pages/publications.html
@@ -21,7 +21,7 @@
       </div>
       <div class="header-bottom head-wrap">
         <div class="breadcrumbs">
-          <div class="logo-link">
+          <div class="logo-link-mobile">
             <a href="../index.html">
               <img src="../assets/images/heroSection/main-logo-light.png" class="main-logo" alt="picture of the main logo">
             </a>
@@ -75,9 +75,14 @@
               </div>
             </address>
           </div>
-          <div class="logo-link">
-            <a href="../index.html">
-              <img src="../assets/images/heroSection/main-logo-light.png" class="main-logo" alt="picture of the main logo">
+          <div class="breadcrumbs">
+            <div class="logo-link-desktop">
+              <a href="../index.html">
+                <img src="../assets/images/heroSection/main-logo-light.png" class="main-logo" alt="picture of the main logo">
+              </a>
+            </div>
+            <a href="./publications.html" class="current-page">
+              publications
             </a>
           </div>
           <div class="nav">
@@ -125,7 +130,7 @@
               </a>
             </article>
             <article class="article">
-              <a href="/" class="article-page">
+              <a href="./gdpr-article.html" class="article-page">
                 <div class="article-banner art-gdpr"></div>
                 <div class="article-details">
                   <div class="article-meta">
