--- a/pages/gdpr-article.html
+++ b/pages/gdpr-article.html
@@ -21,7 +21,7 @@
       </div>
       <div class="header-bottom head-wrap">
         <div class="breadcrumbs">
-          <div class="logo-link">
+          <div class="logo-link-mobile">
             <a href="../index.html">
               <img src="../assets/images/heroSection/main-logo-light.png" class="main-logo" alt="picture of the main logo">
             </a>
@@ -75,9 +75,14 @@
               </div>
             </address>
           </div>
-          <div class="logo-link">
-            <a href="../index.html">
-              <img src="../assets/images/heroSection/main-logo-light.png" class="main-logo" alt="picture of the main logo">
+          <div class="breadcrumbs">
+            <div class="logo-link-desktop">
+              <a href="../index.html">
+                <img src="../assets/images/heroSection/main-logo-light.png" class="main-logo" alt="picture of the main logo">
+              </a>
+            </div>
+            <a href="./publications.html" class="current-page">
+              publications
             </a>
           </div>
           <div class="nav">
