--- a/pages/services.html
+++ b/pages/services.html
@@ -24,7 +24,7 @@
             </div>
             <div class="header-bottom head-wrap">
               <div class="breadcrumbs">
-                <div class="logo-link">
+                <div class="logo-link-mobile">
                   <a href="../index.html">
                     <img src="../assets/images/heroSection/main-logo-mobile.png" class="main-logo" alt="picture of the main logo">
                   </a>
@@ -78,9 +78,14 @@
                     </div>
                   </address>
                 </div>
-                <div class="logo-link">
-                  <a href="../index.html">
-                    <img src="../assets/images/heroSection/main-logo-mobile.png" class="main-logo" alt="picture of the main logo">
+                <div class="breadcrumbs">
+                  <div class="logo-link-desktop">
+                    <a href="../index.html">
+                      <img src="../assets/images/heroSection/main-logo-mobile.png" class="main-logo" alt="picture of the main logo">
+                    </a>
+                  </div>
+                  <a href="../pages/services.html" class="current-page">
+                    services
                   </a>
                 </div>
                 <div class="nav">
