Add contacts page

--- a/pages/it-service.html
+++ b/pages/it-service.html
@@ -93,8 +93,8 @@
                     <a href="/" class="header-nav-link">about us</a>
                     <a href="./services.html" class="header-nav-link nav-link-active">services</a>
                     <a href="/" class="header-nav-link">team</a>
-                    <a href="/" class="header-nav-link">publications</a>
-                    <a href="/" class="header-nav-link">contact</a>
+                    <a href="./publications.html" class="header-nav-link">publications</a>
+                    <a href="./contact.html" class="header-nav-link">contact</a>
                   </nav>
                 </div>
               </div>
@@ -322,7 +322,7 @@
         <a href="./services.html" class="nav-link nav-link-active">services</a>
         <a href="/" class="nav-link">team</a>
         <a href="./publications.html" class="nav-link">publications</a>
-        <a href="/" class="nav-link">contacts</a>
+        <a href="./contact.html" class="nav-link">contacts</a>
       </div>
     </div>
     <script>
