--- a/pages/publications.html
+++ b/pages/publications.html
@@ -91,7 +91,7 @@
               <a href="./services.html" class="header-nav-link">services</a>
               <a href="/" class="header-nav-link">team</a>
               <a href="./publications.html" class="header-nav-link nav-link-active">publications</a>
-              <a href="/" class="header-nav-link">contact</a>
+              <a href="./contact.html" class="header-nav-link">contact</a>
             </nav>
           </div>
         </div>
@@ -276,7 +276,7 @@
         <a href="./services.html" class="nav-link">services</a>
         <a href="/" class="nav-link">team</a>
         <a href="./publications.html" class="nav-link nav-link-active">publications</a>
-        <a href="/" class="nav-link">contacts</a>
+        <a href="./contact.html" class="nav-link">contacts</a>
       </div>
     </div>
     <script>
