--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                       <a href="/" class="header-nav-link">about us</a>
                       <a href="./pages/services.html" class="header-nav-link">services</a>
                       <a href="/" class="header-nav-link">team</a>
-                      <a href="./publications" class="header-nav-link">publications</a>
-                      <a href="/" class="header-nav-link">contact</a>
+                      <a href="./pages/publications" class="header-nav-link">publications</a>
+                      <a href="./pages/contact.html" class="header-nav-link">contact</a>
                     </nav>
                   </div>
                 </div>
@@ -391,7 +391,7 @@
           </div>
         </div>
       </section>
-      <footer class="footer">
+      <footer class="footer main-footer">
         <div class="wrapper">
           <div class="contact-info">
             <address class="address">
@@ -438,10 +438,10 @@
           </svg>
         </button>
         <a href="/" class="nav-link">about us</a>
-        <a href="./pages/services.html" class="nav-link nav-link-active">services</a>
+        <a href="./pages/services.html" class="nav-link">services</a>
         <a href="/" class="nav-link">team</a>
         <a href="./pages/publications.html" class="nav-link">publications</a>
-        <a href="/" class="nav-link">contacts</a>
+        <a href="./pages/contact.html" class="nav-link">contacts</a>
       </div>
     </div>
     <script>
