--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,7 +8,7 @@
   <title>Contact Us</title>
 </head>
     <body>
-      <header class="header-mobile head-light-mode">
+    <header class="header-mobile head-light-mode">
       <div class="header-top head-wrap">
         <div class="localization">
           <a href="/" class="language">ук</a>
@@ -21,7 +21,7 @@
       </div>
       <div class="header-bottom head-wrap">
         <div class="breadcrumbs">
-          <div class="logo-link">
+          <div class="logo-link-mobile">
             <a href="../index.html">
               <img src="../assets/images/heroSection/main-logo-light.png" class="main-logo" alt="picture of the main logo">
             </a>
@@ -41,7 +41,7 @@
         </div>
       </div>
     </header>
-      <header class="header head-light-mode">
+    <header class="header head-light-mode">
       <div class="header-wrapper">
         <div class="header-container">
           <div class="contacts-header">
@@ -75,9 +75,14 @@
               </div>
             </address>
           </div>
-          <div class="logo-link">
-            <a href="../index.html">
-              <img src="../assets/images/heroSection/main-logo-light.png" class="main-logo" alt="picture of the main logo">
+          <div class="breadcrumbs">
+            <div class="logo-link-desktop">
+              <a href="../index.html">
+                <img src="../assets/images/heroSection/main-logo-light.png" class="main-logo" alt="picture of the main logo">
+              </a>
+            </div>
+            <a href="./contact.html" class="current-page">
+              contact
             </a>
           </div>
           <div class="nav">
@@ -85,26 +90,65 @@
               <a href="/" class="header-nav-link">about us</a>
               <a href="./services.html" class="header-nav-link">services</a>
               <a href="/" class="header-nav-link">team</a>
-              <a href="./publications.html" class="header-nav-link nav-link-active">publications</a>
-              <a href="/" class="header-nav-link">contact</a>
+              <a href="./publications.html" class="header-nav-link">publications</a>
+              <a href="./contact.html" class="header-nav-link nav-link-active">contact</a>
             </nav>
           </div>
         </div>
       </div>
     </header>
     <main>
-      <address class="contact-info">
-        <div>
-          Kyiv, Mechnikova str, 14
+      <div class="wrapper wrap-contact">
+        <div class="contact-form">
+          <address class="contact-information contact-section">
+            <div class="contact-detail contact-address">
+              <p class="contact-street">
+                Kyiv, <br>Mechnikova str, 14
+              </p>
+            </div>
+            <div class="contact-detail dial-up-info">
+              <a href="tel:0800211927" class="contact-tel">0800 211 927</a>
+              <a href="mailto:contact@forstudy.space" class="contact-mail">contact@forstudy.space</a>
+            </div>
+            <div class="contact-detail">
+              <a href="/" class="contact-social">
+                <svg width="39" height="38" viewBox="0 0 39 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g clip-path="url(#clip0_69379_341)">
+                    <path d="M38.5 19.1161C38.5 8.55857 29.9934 0 19.5 0C9.00658 0 0.5 8.55857 0.5 19.1161C0.5 28.6575 7.44803 36.5659 16.5312 38V24.6419H11.707V19.1161H16.5312V14.9046C16.5312 10.1136 19.3678 7.46723 23.7078 7.46723C25.7866 7.46723 27.9609 7.84059 27.9609 7.84059V12.545H25.5651C23.2048 12.545 22.4688 14.0185 22.4688 15.5302V19.1161H27.7383L26.8959 24.6419H22.4688V38C31.552 36.5659 38.5 28.6575 38.5 19.1161Z" fill="#24A3FF"/>
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_69379_341">
+                      <rect width="38" height="38" fill="white" transform="translate(0.5)"/>
+                    </clipPath>
+                  </defs>
+                </svg>
+                <p class="contact-social-desc">
+                  Our page <br>on facebook
+                </p>
+              </a>
+            </div>
+          </address>
+          <form action="/" class="service-modal contact contact-section">
+            <div class="modal-title">
+              <h2 class="section-title">
+                We would like to help you
+              </h2>
+            </div>
+            <div class="feedback">
+              <input class="personal-info" type="text" name="name" placeholder="Name" required>
+              <textarea class="personal-info" name="message" rows="5" placeholder="Message"></textarea>
+            </div>
+            <h3 class="callback">
+              How to answer you?
+            </h3>
+            <div class="feedback">
+              <input class="personal-info" type="tel" name="tel" placeholder="Phone number" required>
+              <input class="personal-info" type="email" name="email" placeholder="Email" required>
+            </div>
+            <button class="send-form" type="submit">Send message</button>
+          </form>
         </div>
-        <div class="dial-up-info">
-          <a href="tel:0800211927" class="tel">0800 211 927</a>
-          <a href="mailto:contact@forstudy.space" class="mail">contact@forstudy.space</a>
-        </div>
-        <div class="contact-social">
-        
-        </div>
-      </address>
+      </div>
     </main>
     <footer class="footer">
         <div class="wrapper">
@@ -154,8 +198,8 @@
         <a href="/" class="nav-link">about us</a>
         <a href="./services.html" class="nav-link">services</a>
         <a href="/" class="nav-link">team</a>
-        <a href="./publications.html" class="nav-link nav-link-active">publications</a>
-        <a href="/" class="nav-link">contacts</a>
+        <a href="./publications.html" class="nav-link">publications</a>
+        <a href="./contact.html" class="nav-link nav-link-active">contacts</a>
       </div>
     </div>
     <script>
