--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <nav class="navigation">
                       <a href="/" class="header-nav-link">about us</a>
                       <a href="./pages/services.html" class="header-nav-link">services</a>
-                      <a href="/" class="header-nav-link">team</a>
+                      <a href="./pages/team.html" class="header-nav-link">team</a>
                       <a href="./pages/publications" class="header-nav-link">publications</a>
                       <a href="./pages/contact.html" class="header-nav-link">contact</a>
                     </nav>
@@ -235,7 +235,7 @@
           <div class="team-member-card">
             <div class="team-member-photo"></div>
             <div class="team-member-details">
-              <a href="/" class="section-link">
+              <a href="./pages/team.html" class="section-link">
                 Команда
               </a>
               <h2 class="section-title">
@@ -439,7 +439,7 @@
         </button>
         <a href="/" class="nav-link">about us</a>
         <a href="./pages/services.html" class="nav-link">services</a>
-        <a href="/" class="nav-link">team</a>
+        <a href="./pages/team.html" class="nav-link">team</a>
         <a href="./pages/publications.html" class="nav-link">publications</a>
         <a href="./pages/contact.html" class="nav-link">contacts</a>
       </div>
