--- a/pages/gdpr-article.html
+++ b/pages/gdpr-article.html
@@ -89,7 +89,7 @@
             <nav class="navigation">
               <a href="/" class="header-nav-link">about us</a>
               <a href="./services.html" class="header-nav-link">services</a>
-              <a href="/" class="header-nav-link">team</a>
+              <a href="./team.html" class="header-nav-link">team</a>
               <a href="./publications.html" class="header-nav-link nav-link-active">publications</a>
               <a href="./contact.html" class="header-nav-link">contact</a>
             </nav>
@@ -289,7 +289,7 @@
         </button>
         <a href="/" class="nav-link">about us</a>
         <a href="./services.html" class="nav-link">services</a>
-        <a href="/" class="nav-link">team</a>
+        <a href="./team.html" class="nav-link">team</a>
         <a href="./publications.html" class="nav-link nav-link-active">publications</a>
         <a href="./contact.html" class="nav-link">contacts</a>
       </div>
